posts/cka-exam/create-network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webserver-policy
  namespace: webserver
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: internal-client
      - podSelector: {}
      ports:
        - protocol: TCP
          port: 80       
  egress:
    - to:
      - podSelector: {}
      ports:
        - protocol: TCP
          port: 80
